--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "paintapp-desktop",
-  "productName": "paintapp-desktop",
+  "name": "paintapp",
+  "productName": "PaintAPP",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "PaintAPP Made By Mint Teams",
   "main": "src/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.9.0",
     "@electron-forge/maker-deb": "^7.9.0",
+    "@electron-forge/maker-dmg": "^7.9.0",
     "@electron-forge/maker-rpm": "^7.9.0",
     "@electron-forge/maker-squirrel": "^7.9.0",
     "@electron-forge/maker-zip": "^7.9.0",
@@ -31,5 +32,42 @@
     "@electron-forge/plugin-fuses": "^7.9.0",
     "@electron/fuses": "^1.8.0",
     "electron": "38.1.0"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {
+        "icon": "./assets/icon/paintAPP"
+      },
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "setupIcon": "./assets/icon/paintAPP.ico"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-dmg",
+          "config": {
+            "icon": "./assets/icon/paintAPP.icns"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {
+            "options": {
+              "icon": "./assets/icon/paintAPP.png"
+            }
+          }
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {
+            "options": {
+              "icon": "./assets/icon/paintAPP.png"
+            }
+          }
+        }
+      ]
+    }
   }
 }
