--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "paintapp",
   "productName": "PaintAPP",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "PaintAPP Made By Mint Teams",
   "main": "src/main.js",
+  "type": "module",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
