--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
     "compilerOptions": {
         "target": "ES2022",
         "module": "ES2022",
-        "lib": ["ES2022"],
+        "lib": ["ES2022", "DOM", "DOM.Iterable"],
         "moduleResolution": "node",
         "outDir": "./dist",
         "rootDir": "./src",
         "strict": true,
+        "noImplicitAny": false,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
@@ -15,6 +16,11 @@
         "types": ["node"],
         "typeRoots": ["./node_modules/@types"]
     },
-    "include": ["src/main_process/**/*", "src/main.ts", "src/types/**/*"],
+    "include": [
+        "src/main_process/**/*",
+        "src/main.ts",
+        "src/types/**/*",
+        "src/frontend/**/*"
+    ],
     "exclude": ["node_modules", "dist", "out"]
 }
